# GLFW-glad-VsCode-Setup

./: .gitignore  CMakeLists.txt  filename.cpp  glad.c  glad.h  main.cpp
GeometryDrawing/: main.cpp
Patterns/: CMakeLists.txt  main.cpp
